File upload functionality added

--- a/src/app/poc/poc.component.html
+++ b/src/app/poc/poc.component.html
@@ -1,6 +1,5 @@
 <div>
-
-    <button type="button" (click)="readAndStore()">Click me</button>
+<input type="file" (change)="readAndStore($event)" placeholder="Upload File" accept=".json">
 </div>
 
 
